# auth-demo-server

./: README.md  credentials.py  democlient.py  demoserver.py  framing.py  handshake.py  pyproject.toml  t.py  test_pymonetdb.py  test_server.py
.github/workflows/: pytest.yml
mechanisms/: __init__.py  classic.py  digest.py  gssapi.py  naive_digest.py  naive_gssapi.py  naive_scram.py  plain.py
tests/: setup-github-ci-kerberos.sh  test_demo_server.py  test_mechanisms.py  util.py
