[project]
name = "demo-server"
version = "0.1.0"
description = "A testbed for the new authentication features"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 96

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[dependency-groups]
dev = [
    "pymonetdb>=1.9.0",
    "pytest>=9.0.3",
]
