[project]
name = "auth-demo-server"
version = "0.1.0"
description = "A testbed for the new authentication features"
readme = "README.md"
# requires-python = ">=3.12"
dependencies = [
    "gssapi>=1.11.1",
    "pymonetdb>=1.9.0",
    "scramp>=1.4.9",
]

[tool.ruff]
line-length = 96

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
